# rye_fastapi_template

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
