[project]
name = "rye-fastapi-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "torumitsutake", email = "torumitsutake@gmail.com" }
]
dependencies = [
    "fastapi[all]>=0.115.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_fastapi_template"]
